crates/veloq-runtime/tests/ui/scope_spawn_boxed_lifetime_fail.stderr
error[E0373]: async block may outlive the current function, but it borrows `x`, which is owned by the current function
 --> tests/ui/scope_spawn_boxed_lifetime_fail.rs:8:35
  |
6 |         scope!(ctx, async |s| {
  |                            - lifetime `'1` appears in the type of `s`
7 |             let x = 42;
8 |             let _ = s.spawn_boxed(async {
  |                                   ^^^^^ may outlive borrowed value `x`
9 |                 let _y = &x;
  |                           - `x` is borrowed here
  |
  = note: async blocks are not executed immediately and must either take a reference or ownership of outside variables they use
help: to force the async block to take ownership of `x` (and any other referenced variables), use the `move` keyword
  |
8 |             let _ = s.spawn_boxed(async move {
  |                                         ++++

error[E0373]: async block may outlive the current function, but it borrows `x`, which is owned by the current function
  --> tests/ui/scope_spawn_boxed_lifetime_fail.rs:17:41
   |
15 |         scope!(ctx, async |s| {
   |                            - lifetime `'1` appears in the type of `s`
16 |             let x = 42;
17 |             let _ = s.spawn_boxed_local(async {
   |                                         ^^^^^ may outlive borrowed value `x`
18 |                 let _y = &x;
   |                           - `x` is borrowed here
   |
   = note: async blocks are not executed immediately and must either take a reference or ownership of outside variables they use
help: to force the async block to take ownership of `x` (and any other referenced variables), use the `move` keyword
   |
17 |             let _ = s.spawn_boxed_local(async move {
   |                                               ++++
